--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <div id="root">
+      <button id="settingsButton">Dummy</button>
+    </div>
+    <script type="module" src="/src/index.ts"></script>
   </body>
 </html>
